--- a/index.html
+++ b/index.html
@@ -6,18 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Weather Dashboard</title>
 </head>
 
-<body>
+<body class="container-fluid">
+    <header class="hero">
+        <div class="d-flex p-2 justify-content-center fs-1 text-white">Weather Dashboard</div>
+    </header>
+
+    <div class="row content-row container-fluid">
+        <div class="col-12 col-md-3 bg-secondary-subtle pt-3">
+            <form>
+                <div>
+                    <i class="fa-regular fa-city"></i>
+                    <label class="form-label fs-5 fw-bold" for="city">Search for a City:</label>
+                    <input class="form-control" type="text" placeholder="Enter City" aria-label="default enter city">
+                    <div class="append-city">
+                        <button id="btn-search" class="btn btn-info d-flex justify-content-center align-items-center w-100 " type="button">Search
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="card mt-4 mb-4 search-list-container">
+                <ul id="search-list" class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="weather" class="col-12">
+
+        </div>
+            
 
 
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./assets/script.js"></script>
 </body>
 </html>
