--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script> src="https://code.jquery.com/jquery-3.6.4.min.js"</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" />
@@ -24,7 +23,7 @@
                 <div>
                     <i class="fa-solid fa-tree-city"></i>
                     <label class="form-label fs-5 fw-bold" for="city">Search for a City:</label>
-                    <input class="form-control" type="text" placeholder="Enter City" aria-label="default enter city">
+                    <input id="search-city" class="form-control" type="text" placeholder="Enter City" aria-label="default enter city">
                     <div class="append-city">
                         <button id="btn-search" class="btn btn-info d-flex justify-content-center align-items-center w-100 " type="button">Search
                         </button>
@@ -78,8 +77,8 @@
             </div>
         </main>
     </div>       
-
-
+    <script> src="https://code.jquery.com/jquery-3.6.4.min.js"</script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./assets/script.js"></script>
 </body>
