Created README.md and worked on js code for local storage and appending searched cities. Not working yet

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <form id="search-city">
                     <i class="fa-solid fa-tree-city"></i>
                     <label class="fs-5 fw-bold">Search for a City:</label>
-                    <input class="form-control my-2" type="search" placeholder="Enter City" id="city-input">
-                    <button class="btn btn-primary my-2 w-100" type="submit" id="search-button"> Search</button>
+                    <input class="form-control  appendList my-2" type="search" placeholder="Enter City" id="city-input">
+                    <button class="btn btn-primary appendList my-2 w-100" type="submit" id="search-button"> Search</button>
                 </form>
 
-                <button class="btn btn-danger my-2 w-100" type="submit" id="clear-button">Clear History</button>
+                <button class="btn btn-danger appendList my-2 w-100" type="submit" id="clear-button">Clear History</button>
                 <hr>
                 <div class="past-cities" id="past-cities">
                     <!-- Append buttons for previously searched cities -->
-                    <!-- <button class="btn bg-dark-subtle text-black my-2 w-100 " type="submit">City 1</button> -->
+                    <!-- <button class="btn bg-dark-subtle text-black my-2 w-100 " type="submit">San Diego</button> -->
                 </div>
             </div>
 
